# sds-keyval

./: .gitignore  .gitmodules  COPYRIGHT  Makefile.am  README.build  README.config  README.md  README.test  configure.ac  sloc.sh
include/: sdskv-client.h  sdskv-client.hpp  sdskv-common.h  sdskv-common.hpp  sdskv-server.h  sdskv-server.hpp
maint/: kv-client.pc.in  kv-group.pc.in  kv-server.pc.in  sds-keyval.pc.in  sdskv-client.pc.in  sdskv-server.pc.in
old-test/: test-cci.conf  test-client.cc  test-mpi-cci.conf  test-mpi-srun-hosts.conf  test-server.cc
src/: benchmark.json  berkeleydb_datastore.cc  bulk.h  bwtree_datastore.cc  datastore.cc  datastore.h  keyval-internal.h  kv-client.c  kv-server.cc  kvgroup-client.cc  kvgroup-server.cc  leveldb_datastore.cc  sds-keyval-group.h  sds-keyval.h  sdskv-aggr-service.c  sdskv-benchmark.cc  sdskv-client.c  sdskv-client.h  sdskv-common.h  sdskv-rpc-types.h  sdskv-server-daemon.c  sdskv-server-daemon.cc  sdskv-server.cc  sdskv-server.h  sdskv-shutdown.c
src/BwTree/src/: bwtree.h
src/datastore/: berkeleydb_datastore.cc  berkeleydb_datastore.h  bwtree_datastore.cc  bwtree_datastore.h  datastore.cc  datastore.h  datastore_factory.h  fs_util.h  leveldb_datastore.cc  leveldb_datastore.h  map_datastore.h  null_datastore.h
test/: basic.sh  bench-client.cc  custom-cmp-test.sh  cxx-test.sh  erase-test.sh  get-test.sh  length-test.sh  list-db-test.sh  list-keys-prefix-test.sh  list-keys-test.sh  list-keyvals-test.sh  migrate-test.sh  multi-test.sh  open-test.sh  packed-test.sh  put-test.sh  sdskv-client-test.cc  sdskv-custom-cmp-test.cc  sdskv-custom-server-daemon.c  sdskv-cxx-test.cc  sdskv-erase-test.cc  sdskv-get-test.cc  sdskv-length-test.cc  sdskv-list-db-test.cc  sdskv-list-keys-prefix-test.cc  sdskv-list-keys-test.cc  sdskv-list-kv-test.cc  sdskv-migrate-test.cc  sdskv-multi-test.cc  sdskv-open-test.cc  sdskv-packed-test.cc  sdskv-put-test.cc  test-client.c  test-client.cc  test-mpi-cci.conf  test-mpi-group.cc  test-mpi-srun-mp.conf  test-mpi.cc  test-server.c  test-server.cc  (+1 more)
